--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^2.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "php-flasher/flasher-laravel": "^2.0"
+        "php-flasher/flasher-laravel": "^2.0",
+        "php-flasher/flasher-toastr-laravel": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
