--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=2006
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
