--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+EVENT_DATE_TIME="2024-08-06 08:00"
+EVENT_LOCATION="Grand Ballroom PT United Tractors, Tbk"
+COMPANY_ADDRESS="Jl. Raya Bekasi Km 22, Cakung, Jakarta Timur"
