--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,39 +1,32 @@
-name: CI/CD
-on :
+name: CI/CD Pipeline
+on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  workflow_dispatch:
-
+    branches:
+      - main # Ganti dengan nama branch yang ingin kamu gunakan
 jobs:
-  web-deploy:
-    name: auto deploy
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: get latest code
+    - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: FTP Deploy
-    # You may pin to the exact commit or the version.
-    # uses: SamKirkland/FTP-Deploy-Action@8a24039354ee91000cb948cb4a1dbdf1a1b94a3c
-      uses: SamKirkland/FTP-Deploy-Action@v4.0.0
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
       with:
-        # ftp server
-        server: undangan.kaitodecode.com
-        # ftp username
-        username: admin@undangan.kaitodecode.com
-        # ftp password
-        password: ANNwpwqejhbj123213jbadsaskdbajsb
-        # Server port to connect to (read your web hosts docs)
-        port: 21
-        # protocol to deploy with - ftp, ftps, or ftps-legacy
-        protocol: ftp
-        # An array of glob patterns, these files will not be included in the publish/delete process
-        exclude: |
-          */.git
-          */.git/**
-          */node_modules/*
-          */vendor/*
+        php-version: '8.2' # Ganti dengan versi PHP yang kamu gunakan
+        extensions: mbstring, xml, mysql
+    - name: Install Composer dependencies
+      run: composer install --no-dev --optimize-autoloader
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Deploy to shared hosting via FTP
+      env:
+        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+        FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
+        DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
+      run: |
+        lftp -u $FTP_USERNAME,$FTP_PASSWORD -e "mirror -R ./ $DEPLOY_PATH; bye" $SERVER_IP
