--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,32 +1,48 @@
 name: CI/CD Pipeline
+
 on:
   push:
     branches:
       - main # Ganti dengan nama branch yang ingin kamu gunakan
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2' # Ganti dengan versi PHP yang kamu gunakan
         extensions: mbstring, xml, mysql
+
     - name: Install Composer dependencies
       run: composer install --no-dev --optimize-autoloader
+
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    - name: Deploy to shared hosting via FTP
+
+    - name: Deploy to VPS
       env:
-        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-        FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
+        USERNAME: ${{ secrets.USERNAME }}
         DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
       run: |
-        lftp -u $FTP_USERNAME,$FTP_PASSWORD -e "mirror -R ./ $DEPLOY_PATH; bye" $SERVER_IP
+        echo "$SSH_PRIVATE_KEY" > id_rsa
+        chmod 600 id_rsa
+        rsync -avz -e "ssh -i id_rsa -o StrictHostKeyChecking=no" ./ $USERNAME@$SERVER_IP:$DEPLOY_PATH
+        ssh -i id_rsa -o StrictHostKeyChecking=no $USERNAME@$SERVER_IP << 'EOF'
+          cd $DEPLOY_PATH
+          php artisan migrate --force
+          sudo systemctl restart nginx # Restart web server jika diperlukan
+        EOF
