--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,12 +25,11 @@ jobs:
     steps:
     - name: Set proper permissions
       run: |
-        sudo chmod -R 755 /path/to/your/project/bootstrap/cache
-        sudo chmod -R 755 /path/to/your/project/storage
+        sudo chmod -R 755 /var/www/web-undangan/bootstrap/cache
+        sudo chmod -R 755 /var/www/web-undangan/storage
     - name: Rsync files
       run: |
-        rsync -av /path/to/source /path/to/destination
-
+        rsync -av ./ /var/www/web-undangan
   deploy:
     runs-on: ubuntu-latest
     needs: build
