--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,52 +1,39 @@
-name: CI/CD Pipeline
-
-on:
+name: CI/CD
+on :
   push:
-    branches:
-      - main # Ganti dengan nama branch yang ingin kamu gunakan
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+  workflow_dispatch:
 
 jobs:
-  build:
+  web-deploy:
+    name: auto deploy
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: get latest code
       uses: actions/checkout@v3
 
-    - name: Set up PHP
-      uses: shivammathur/setup-php@v2
+    - name: FTP Deploy
+    # You may pin to the exact commit or the version.
+    # uses: SamKirkland/FTP-Deploy-Action@8a24039354ee91000cb948cb4a1dbdf1a1b94a3c
+      uses: SamKirkland/FTP-Deploy-Action@v4.0.0
       with:
-        php-version: '8.2' # Ganti dengan versi PHP yang kamu gunakan
-        extensions: mbstring, xml, mysql
-
-    - name: Install Composer dependencies
-      run: composer install --no-dev --optimize-autoloader
-
-    - name: Rsync files
-      run: |
-        rsync -av ./ ${{ secrets.DEPLOY_PATH }}
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Deploy to VPS
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SERVER_IP: ${{ secrets.SERVER_IP }}
-        USERNAME: ${{ secrets.USERNAME }}
-        DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
-      run: |
-        echo "$SSH_PRIVATE_KEY" > id_rsa
-        chmod 600 id_rsa
-        rsync -avz -e "ssh -i id_rsa -o StrictHostKeyChecking=no" ./ $USERNAME@$SERVER_IP:$DEPLOY_PATH
-        ssh -i id_rsa -o StrictHostKeyChecking=no $USERNAME@$SERVER_IP "
-          cd $DEPLOY_PATH
-          php artisan migrate --force
-          sudo systemctl restart nginx # Restart web server jika diperlukan
-        "
-
+        # ftp server
+        server: undangan.kaitodecode.com
+        # ftp username
+        username: undangan@undangan.kaitodecode.com
+        # ftp password
+        password: asdfdfgfhjyt6yrtedsawZSXCDVBNMJK,LIOUKYTREWQASDFGBHNMJKLIOUYTGRFDSAWQ23E4RTGFHJKUIO8UYJHGVBCF
+        # Server port to connect to (read your web hosts docs)
+        port: 21
+        # protocol to deploy with - ftp, ftps, or ftps-legacy
+        protocol: ftp
+        # An array of glob patterns, these files will not be included in the publish/delete process
+        exclude: |
+          */.git
+          */.git/**
+          */node_modules/*
+          */vendor/*
