--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,11 +22,11 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.0.0
       with:
         # ftp server
-        server: undangan.kaitodecode.com
+        server: ftp.utschoolhub.com
         # ftp username
-        username: admin@undangan.kaitodecode.com
+        username: u518833247.app
         # ftp password
-        password: ANNwpwqejhbj123213jbadsaskdbajsb
+        password: AsdjdsawJHBbhduioq12837793812(&^^&
         # Server port to connect to (read your web hosts docs)
         port: 21
         # protocol to deploy with - ftp, ftps, or ftps-legacy
