--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
         # ftp username
         username: u518833247.app
         # ftp password
-        password: AsdjdsawJHBbhduioq12837793812(&^^&
+        password: Robotcanggih1*
         # Server port to connect to (read your web hosts docs)
         port: 21
         # protocol to deploy with - ftp, ftps, or ftps-legacy
