--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,8 @@ VITE_APP_NAME="${APP_NAME}"
 EVENT_DATE_TIME="2024-08-06 08:00"
 EVENT_LOCATION="Grand Ballroom PT United Tractors, Tbk"
 COMPANY_ADDRESS="Jl. Raya Bekasi Km 22, Cakung, Jakarta Timur"
+
+
+# Credentials
+APP_EMAIL_ADMIN="admin@gmail.com"
+APP_PASS_ADMIN="password"
