--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-dompdf": "^2.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "php-flasher/flasher-laravel": "^2.0",
         "php-flasher/flasher-toastr-laravel": "^2.0"
     },
