feat: Monitor Peserta
WIP VIEW ON ADI

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,5 @@ COMPANY_ADDRESS="Jl. Raya Bekasi Km 22, Cakung, Jakarta Timur"
 # Credentials
 APP_EMAIL_ADMIN="admin@gmail.com"
 APP_PASS_ADMIN="password"
+APP_EMAIL_MONITOR="monitor@gmail.com"
+APP_PASS_MONITOR="password
